{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 13,
  "lineage": "92781c75-1eea-3f69-bbca-7378e8dd5095",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:loadbalancer/app/flywhl-aps-dev-internal/a86e473491ae5b54",
            "arn_suffix": "app/flywhl-aps-dev-internal/a86e473491ae5b54",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-flywhl-aps-dev-internal-1052819670.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:loadbalancer/app/flywhl-aps-dev-internal/a86e473491ae5b54",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flywhl-aps-dev-internal",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-051c7d2a0f0a8dcc7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03bd68873dbab65df"
              },
              {
                "subnet_id": "subnet-0cf0e77fd3ee5955a"
              }
            ],
            "subnets": [
              "subnet-03bd68873dbab65df",
              "subnet-0cf0e77fd3ee5955a"
            ],
            "tags": {
              "Name": "flywhl-aps-dev-internal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-dev-internal",
              "environment": "dev"
            },
            "vpc_id": "vpc-0e0f1d04a741af0bc",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_internal_sg",
            "data.terraform_remote_state.app",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:loadbalancer/app/flywhl-aps-dev-public/2c37e9dad5243732",
            "arn_suffix": "app/flywhl-aps-dev-public/2c37e9dad5243732",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "flywhl-aps-dev-public-1833344770.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:loadbalancer/app/flywhl-aps-dev-public/2c37e9dad5243732",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flywhl-aps-dev-public",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0422e8fd2b5aef44d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a80eb517e8953646"
              },
              {
                "subnet_id": "subnet-0bb4318d467b0c928"
              }
            ],
            "subnets": [
              "subnet-0a80eb517e8953646",
              "subnet-0bb4318d467b0c928"
            ],
            "tags": {
              "Name": "flywhl-aps-dev-public",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "flywhl-aps-dev-public",
              "environment": "dev"
            },
            "vpc_id": "vpc-0e0f1d04a741af0bc",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_public_sg",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:listener/app/flywhl-aps-dev-internal/a86e473491ae5b54/044ea38b6723b3f7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:targetgroup/flywhl-aps-dev-app-tg/d4c45d67e07fe13e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:listener/app/flywhl-aps-dev-internal/a86e473491ae5b54/044ea38b6723b3f7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:loadbalancer/app/flywhl-aps-dev-internal/a86e473491ae5b54",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_internal_sg",
            "data.terraform_remote_state.app",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:listener/app/flywhl-aps-dev-public/2c37e9dad5243732/6927b0b54b3cf5e9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:targetgroup/flywhl-aps-dev-web-tg/6e03abca3946d656",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:listener/app/flywhl-aps-dev-public/2c37e9dad5243732/6927b0b54b3cf5e9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:loadbalancer/app/flywhl-aps-dev-public/2c37e9dad5243732",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_public_sg",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "app_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:targetgroup/flywhl-aps-dev-app-tg/d4c45d67e07fe13e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:listener-rule/app/flywhl-aps-dev-internal/a86e473491ae5b54/044ea38b6723b3f7/88b4bbd7030083c6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:listener-rule/app/flywhl-aps-dev-internal/a86e473491ae5b54/044ea38b6723b3f7/88b4bbd7030083c6",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:listener/app/flywhl-aps-dev-internal/a86e473491ae5b54/044ea38b6723b3f7",
            "priority": 1,
            "region": "ap-south-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_listener.app_http",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_internal_sg",
            "data.terraform_remote_state.app",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:targetgroup/flywhl-aps-dev-web-tg/6e03abca3946d656",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:listener-rule/app/flywhl-aps-dev-public/2c37e9dad5243732/6927b0b54b3cf5e9/2e0631b42833b6a8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:listener-rule/app/flywhl-aps-dev-public/2c37e9dad5243732/6927b0b54b3cf5e9/2e0631b42833b6a8",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:listener/app/flywhl-aps-dev-public/2c37e9dad5243732/6927b0b54b3cf5e9",
            "priority": 1,
            "region": "ap-south-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public",
            "aws_lb_listener.web_http",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_public_sg",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:targetgroup/flywhl-aps-dev-app-tg/d4c45d67e07fe13e",
            "arn_suffix": "targetgroup/flywhl-aps-dev-app-tg/d4c45d67e07fe13e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:targetgroup/flywhl-aps-dev-app-tg/d4c45d67e07fe13e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:235881042926:loadbalancer/app/flywhl-aps-dev-internal/a86e473491ae5b54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flywhl-aps-dev-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:targetgroup/flywhl-aps-dev-web-tg/6e03abca3946d656",
            "arn_suffix": "targetgroup/flywhl-aps-dev-web-tg/6e03abca3946d656",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:235881042926:targetgroup/flywhl-aps-dev-web-tg/6e03abca3946d656",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:235881042926:loadbalancer/app/flywhl-aps-dev-public/2c37e9dad5243732"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flywhl-aps-dev-web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_internal_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:235881042926:security-group/sg-051c7d2a0f0a8dcc7",
            "description": "alb_internal_sg_dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051c7d2a0f0a8dcc7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from Web SG",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062b068e77715b5ff"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_internal_sg_dev",
            "name_prefix": "",
            "owner_id": "235881042926",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_internal_sg_dev",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "alb_internal_sg_dev",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.app",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:235881042926:security-group/sg-0422e8fd2b5aef44d",
            "description": "alb_public_sg_dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0422e8fd2b5aef44d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_public_sg_dev",
            "name_prefix": "",
            "owner_id": "235881042926",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_public_sg_dev",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "alb_public_sg_dev",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0f1d04a741af0bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    }
  ]
}